@@ -1226,6 +1226,282 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testIsCurrent
+specifier|public
+name|void
+name|testIsCurrent
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|newField
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a b c"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|iwc
+operator|=
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+expr_stmt|;
+name|doc
+operator|=
+operator|new
+name|Document
+argument_list|()
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|newField
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"a b c"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|nrtReader
+init|=
+name|writer
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|nrtReader
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|nrtReader
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// should see the changes
+name|writer
+operator|.
+name|optimize
+argument_list|()
+expr_stmt|;
+comment|// make sure we don't have a merge going on
+name|assertFalse
+argument_list|(
+name|nrtReader
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|nrtReader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexReader
+name|dirReader
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|nrtReader
+operator|=
+name|writer
+operator|.
+name|getReader
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|dirReader
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|nrtReader
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// nothing was committed yet so we are still current
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|nrtReader
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// sees the actual document added
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|dirReader
+operator|.
+name|maxDoc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// close is actually a commit both should see the changes
+name|assertTrue
+argument_list|(
+name|nrtReader
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|dirReader
+operator|.
+name|isCurrent
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// this reader has been opened before the writer was closed / committed
+name|dirReader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|nrtReader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 comment|/**    * Test using IW.addIndexes    *     * @throws Exception    */
 DECL|method|testAddIndexes
 specifier|public
